--- a/e2e/__snapshots__/e2e/taro-vite-tailwindcss-v4/app-origin.wxss
+++ b/e2e/__snapshots__/e2e/taro-vite-tailwindcss-v4/app-origin.wxss
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.16 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
 ::-webkit-backdrop {
   --tw-gradient-position: initial;
   --tw-gradient-from: rgba(0, 0, 0, 0);
@@ -137,13 +137,13 @@ text,
     var(--tw-gradient-to) var(--tw-gradient-to-position)
   );
 }
-.text-_b55rpx_B {
-  font-size: 55rpx;
-}
 .text-_b_hc31d6b_B {
   color: #c31d6b;
 }
 .text-_b_hfff_B {
   color: #fff;
+}
+.text-_b55rpx_B {
+  color: 55rpx;
 }
 /*$vite$:1*/
