--- a/e2e/__snapshots__/e2e/taro-webpack-tailwindcss-v4/app.wxss
+++ b/e2e/__snapshots__/e2e/taro-webpack-tailwindcss-v4/app.wxss
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.16 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
 ::-webkit-backdrop {
   --tw-gradient-position: initial;
   --tw-gradient-from: rgba(0, 0, 0, 0);
@@ -132,11 +132,11 @@ text,
     var(--tw-gradient-to) var(--tw-gradient-to-position)
   );
 }
-.text-_b100rpx_B {
-  font-size: 100rpx;
-}
 .text-_b_hfff_B {
   color: #fff;
+}
+.text-_b100rpx_B {
+  color: 100rpx;
 }
 .text-pink-200 {
   color: rgb(252, 206, 232);
