--- a/e2e/__snapshots__/e2e/uni-app/page.wxml
+++ b/e2e/__snapshots__/e2e/uni-app/page.wxml
@@ -22,7 +22,7 @@
       <view class="text-_b22px_B Layout--text-_b22px_B">对酒当歌，人生几何</view>
       <view class="_eh-5 Layout--_eh-5 w-5 Layout--w-5 shadow-_b0px_2px_11px_0px_rgba_p0_m0_m0_m0_d4_P_B Layout--shadow-_b0px_2px_11px_0px_rgba_p0_m0_m0_m0_d4_P_B"></view>
       <view class="h-5 Layout--h-5 w-5 Layout--w-5 shadow-_b0px_2px_11px_0px__h00000a_B Layout--shadow-_b0px_2px_11px_0px__h00000a_B"></view>
-      <view class="text-_b20px_B Layout--text-_b20px_B bg-_b_h000000_B Layout--bg-_b_h000000_B">classObject</view>
+      <view>classObject</view>
       <view class="bg-_b_hfafa00_B Layout--bg-_b_hfafa00_B">Toggle</view>
       <view>Toggle</view>
       <button data-event-opts="tap,e0,$event" role="button" aria-disabled="false">Toggle flag</button>
