--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -7,6 +7,7 @@
 @use './custom/theme';
 @use './custom/layout';
 @use './custom/homepage';
+@use './custom/docs';
 @use './custom/animations';
 
 // @include M.theme-transition('[data-theme="dark"]');
