--- a/e2e/__snapshots__/e2e/taro-webpack-tailwindcss-v4/app.wxss
+++ b/e2e/__snapshots__/e2e/taro-webpack-tailwindcss-v4/app.wxss
@@ -47,11 +47,17 @@ text,
 :host,
 page,
 .tw-root {
+  --font-sans:
+    ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
   --color-cyan-500: rgb(0, 182, 212);
   --color-blue-500: rgb(50, 128, 255);
   --color-purple-800: rgb(110, 17, 176);
   --color-pink-200: rgb(252, 206, 232);
   --spacing: 8rpx;
+  --default-font-family: var(--font-sans);
+  --default-mono-font-family: var(--font-mono);
 }
 @supports (color: color(display-p3 0 0 0%)) {
   :host,
@@ -93,6 +99,324 @@ text,
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+::-webkit-file-upload-button {
+  border: 0 solid;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+::file-selector-button {
+  border: 0 solid;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+:host,
+html {
+  -webkit-text-size-adjust: 100%;
+  font-family:
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    Segoe UI,
+    Roboto,
+    Ubuntu,
+    Cantarell,
+    Noto Sans,
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol',
+    'Noto Color Emoji';
+  font-family: var(
+    --default-font-family,
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    Segoe UI,
+    Roboto,
+    Ubuntu,
+    Cantarell,
+    Noto Sans,
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol',
+    'Noto Color Emoji'
+  );
+  -webkit-font-feature-settings: normal;
+  -webkit-font-feature-settings: var(--default-font-feature-settings, normal);
+  font-feature-settings: normal;
+  font-feature-settings: var(--default-font-feature-settings, normal);
+  font-variation-settings: normal;
+  font-variation-settings: var(--default-font-variation-settings, normal);
+  line-height: 1.5;
+  -moz-tab-size: 4;
+  -o-tab-size: 4;
+  tab-size: 4;
+  -webkit-tap-highlight-color: transparent;
+}
+hr {
+  border-top-width: 1rpx;
+  color: inherit;
+  height: 0;
+}
+abbr {
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: inherit;
+  font-weight: inherit;
+}
+a {
+  color: inherit;
+  -webkit-text-decoration: inherit;
+  text-decoration: inherit;
+}
+b,
+strong {
+  font-weight: bolder;
+}
+code,
+kbd,
+pre,
+samp {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
+  font-family: var(--default-mono-font-family, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace);
+  -webkit-font-feature-settings: normal;
+  -webkit-font-feature-settings: var(--default-mono-font-feature-settings, normal);
+  font-feature-settings: normal;
+  font-feature-settings: var(--default-mono-font-feature-settings, normal);
+  font-size: 1em;
+  font-variation-settings: normal;
+  font-variation-settings: var(--default-mono-font-variation-settings, normal);
+}
+small {
+  font-size: 80%;
+}
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sub {
+  bottom: -0.25em;
+}
+sup {
+  top: -0.5em;
+}
+table {
+  border-collapse: collapse;
+  border-color: inherit;
+  text-indent: 0;
+}
+:-moz-focusring {
+  outline: auto;
+}
+progress {
+  vertical-align: baseline;
+}
+summary {
+  display: list-item;
+}
+menu,
+ol,
+ul {
+  list-style: none;
+}
+audio,
+canvas,
+embed,
+iframe,
+img,
+object,
+svg,
+video {
+  display: block;
+  vertical-align: middle;
+}
+img,
+video {
+  height: auto;
+  max-width: 100%;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 0;
+  color: inherit;
+  font: inherit;
+  -webkit-font-feature-settings: inherit;
+  font-feature-settings: inherit;
+  font-variation-settings: inherit;
+  letter-spacing: inherit;
+  opacity: 1;
+}
+::-webkit-file-upload-button {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 0;
+  color: inherit;
+  font: inherit;
+  -webkit-font-feature-settings: inherit;
+  font-feature-settings: inherit;
+  font-variation-settings: inherit;
+  letter-spacing: inherit;
+  opacity: 1;
+}
+::file-selector-button {
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 0;
+  color: inherit;
+  font: inherit;
+  -webkit-font-feature-settings: inherit;
+  font-feature-settings: inherit;
+  font-variation-settings: inherit;
+  letter-spacing: inherit;
+  opacity: 1;
+}
+select[multiple] optgroup,
+select[size] optgroup {
+  font-weight: bolder;
+}
+select[multiple] optgroup option,
+select[size] optgroup option {
+  -webkit-padding-start: 20rpx;
+  padding-left: 20rpx;
+}
+::-webkit-file-upload-button {
+  -webkit-margin-end: 4rpx;
+  margin-right: 4rpx;
+}
+::file-selector-button {
+  -webkit-margin-end: 4rpx;
+  margin-right: 4rpx;
+}
+::-webkit-input-placeholder {
+  opacity: 1;
+}
+::-moz-placeholder {
+  opacity: 1;
+}
+:-ms-input-placeholder {
+  opacity: 1;
+}
+::-ms-input-placeholder {
+  opacity: 1;
+}
+::placeholder {
+  opacity: 1;
+}
+@supports (not (-webkit-appearance: -apple-pay-button)) or (contain-intrinsic-size: 1px) {
+  ::-webkit-input-placeholder {
+    color: currentColor;
+  }
+  ::-moz-placeholder {
+    color: currentColor;
+  }
+  :-ms-input-placeholder {
+    color: currentColor;
+  }
+  ::-ms-input-placeholder {
+    color: currentColor;
+  }
+  ::placeholder {
+    color: currentColor;
+  }
+}
+textarea {
+  resize: vertical;
+}
+::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+::-webkit-date-and-time-value {
+  min-height: 1lh;
+  text-align: inherit;
+}
+::-webkit-datetime-edit {
+  display: -webkit-inline-flex;
+  display: inline-flex;
+}
+::-webkit-datetime-edit-fields-wrapper {
+  padding: 0;
+}
+::-webkit-datetime-edit {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-datetime-edit-year-field {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-datetime-edit-month-field {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-datetime-edit-day-field {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-datetime-edit-hour-field {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-datetime-edit-minute-field {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-datetime-edit-second-field {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-datetime-edit-millisecond-field {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-datetime-edit-meridiem-field {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+::-webkit-calendar-picker-indicator {
+  line-height: 1;
+}
+:-moz-ui-invalid {
+  box-shadow: none;
+}
+button,
+input {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+}
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  appearance: button;
+}
+::file-selector-button {
+  -webkit-appearance: button;
+  -moz-appearance: button;
+  appearance: button;
+}
+::-webkit-inner-spin-button {
+  height: auto;
+}
+::-webkit-outer-spin-button {
+  height: auto;
 }
 .static {
   position: static;
