--- a/e2e/__snapshots__/e2e/rax-app/page.wxml
+++ b/e2e/__snapshots__/e2e/rax-app/page.wxml
@@ -19,7 +19,7 @@
     </view>
     <view class="h5-div rax-view-v2 p-_b20px_B -mt-2 mb-_b-20px_B" data-private-node-id="n_54" style="">p-_b20px_B -mt-2 mb-_b-20px_B margin的jit 可不能这么写 -m-_b20px_B</view>
     <view class="h5-div rax-view-v2 space-y-_b1_d6rem_B w-_b200_v_B" data-private-node-id="n_56" style="">
-      <view class="h5-div rax-view-v2 w-_b300rpx_B text-black text-opacity-_b0_d19_B" data-private-node-id="n_57" style="">w-_b300rpx_B text-black text-opacity-_b0_d19_B</view>
+      <view class="h5-div rax-view-v2 w-_b300rpx_B text-black text-opacity- 0 19" data-private-node-id="n_57" style="">w-_b300rpx_B text-black text-opacity-[0.19]</view>
       <view class="h5-div rax-view-v2 min-w-_b300rpx_B max-h-_b100px_B text-_b20px_B leading-_b0_d9_B" data-private-node-id="n_59" style="">
         min-w-_b300rpx_B max-h-_b100px_B text-_b20px_B leading-_b0_d9_B
       </view>
@@ -27,13 +27,13 @@
         max-w-_b300rpx_B min-h-_b100px_B text-_b_hdddddd_B
       </view>
       <view
-        class="h5-div rax-view-v2 flex items-center justify-center h-_b100px_B w-_b100px_B rounded-_b40px_B bg-_b_h123456_B bg-opacity-_b0_d54_B text-_b_hffffff_B"
+        class="h5-div rax-view-v2 flex items-center justify-center h-_b100px_B w-_b100px_B rounded-_b40px_B bg-_b_h123456_B bg-opacity- 0 54 text-_b_hffffff_B"
         data-private-node-id="n_63"
         style="">
         Hello
       </view>
-      <view class="h5-div rax-view-v2 _eborder-_b10px_B _eborder-_b_h098765_B _eborder-solid _eborder-opacity-_b0_d44_B" data-private-node-id="n_65" style="">
-        _eborder-_b10px_B _eborder-_b_h098765_B _eborder-solid _eborder-opacity-_b0_d44_B
+      <view class="h5-div rax-view-v2 _eborder-_b10px_B _eborder-_b_h098765_B _eborder-solid border-opacity- 0 44" data-private-node-id="n_65" style="">
+        _eborder-_b10px_B _eborder-_b_h098765_B _eborder-solid !border-opacity-[0.44]
       </view>
       <view class="h5-div rax-view-v2 grid grid-cols-3 divide-x-_b10px_B divide-_b_h010101_B divide-solid" data-private-node-id="n_67" style="">
         <view class="h5-div rax-view-v2" data-private-node-id="n_68" style="">1</view>
